<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">weather</string>
    <string name="no_data">No Data</string>
    <string name="localization">Leon, Nicaragua</string>
    <string name="temp_placeholder">%d C</string>
    <string name="precip_placeholder">%d %%</string>
    <string name="precip">PRECIP</string>
    <string name="daily_button_text">DAILY WEATHER</string>
    <string name="hourly_button_text">HOURLY WHEATHER</string>
    <string name="temp">TEMP</string>
    <string name="weather_icon">weather icon</string>
    <string name="language">en</string>
    <string name="units">si</string>
    <string name="network_error">NETWORK ERROR</string>
    <string name="retry">RETRY?R</string>
    <string name="daily_weather">Daily Weather</string>
    <string name="summary_of_the_week">Summary of the week</string>
    <string name="no_data" tools:ignore="DuplicateDefinition">No Data</string>
    <string name="hourly_weather">Hourly Weather</string>
    <string name="sumary_of_the_date">Sumary Of the Date</string>


</resources>
