<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main"
        tools:context=".MainActivity"
        android:background="@color/colorPrimary">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/na" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/iconimageView"
            android:layout_marginBottom="24dp" android:contentDescription="@string/weather_icon"/>
    <TextView
            android:text="@string/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/descriptionTextView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iconimageView" tools:text="Clear Day" android:textSize="24sp"/>

    <TextView
            android:text="@string/localization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/localizationTextView" app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/iconimageView" android:textSize="24sp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.5"/>
    <TextView
            android:text="@string/temp_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tempTextView" app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="center" tools:text="24 C"
            android:textSize="24sp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"/>
    <TextView
            android:text="@string/precip_placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/precipTextView" app:layout_constraintStart_toEndOf="@+id/tempTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="24sp" android:textAlignment="center"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
            tools:text="23.4 %"/>
    <TextView
            android:text="@string/temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textSize="12sp" app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tempTextView" android:textAlignment="center"/>
    <TextView
            android:text="@string/precip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/precipTextView" android:textAlignment="center"
            android:textSize="12sp"/>
    <Button
            android:text="@string/daily_button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dailyweatherButton"
            style="@style/Widget.AppCompat.Button.Borderless" app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold" android:textAllCaps="true"
            android:textAlignment="center"/>
    <Button
            android:text="@string/hourly_button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hourlyWheatherButton"
            style="@style/Widget.AppCompat.Button.Borderless" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="parent" android:textStyle="bold" android:textAllCaps="true"/>
</android.support.constraint.ConstraintLayout>